--- a/ItemPicker.csproj
+++ b/ItemPicker.csproj
@@ -7,7 +7,7 @@
     <RootNamespace>Zebble</RootNamespace>
     <PackageId>Zebble.ItemPicker</PackageId>
     <Product>$(AssemblyName) ($(TargetFramework))</Product>
-    <Version>3.12.166.0</Version>
+    <Version>3.12.167.0</Version>
     <PackOnBuild>true</PackOnBuild>
     <NeutralLanguage>en</NeutralLanguage>
     <LangVersion>default</LangVersion>
@@ -42,6 +42,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" $(TargetFramework.StartsWith('MonoAndroid')) ">
     <DefineConstants>ANDROID</DefineConstants>
+    <AndroidUseIntermediateDesignerFile>false</AndroidUseIntermediateDesignerFile>
   </PropertyGroup>
   <PropertyGroup Condition=" $(TargetFramework.StartsWith('Xamarin.iOS')) ">
     <DefineConstants>IOS</DefineConstants>
@@ -65,11 +66,8 @@
     <None Remove="Zebble-LicenseAgreement.txt" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Zebble" Version="4.5.423" />
-    <PackageReference Include="Zebble.CheckBox" Version="1.22.117" />
-    <PackageReference Include="Zebble.ListView" Version="4.10.180" />
-    <PackageReference Include="Zebble.OptionsList" Version="3.15.136" />
-    <PackageReference Include="Zebble.SearchInput" Version="3.18.276" />
+    <PackageReference Include="Zebble.OptionsList" Version="3.15.138" />
+    <PackageReference Include="Zebble.SearchInput" Version="3.18.278" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Android\" />
