--- a/ItemPicker.csproj
+++ b/ItemPicker.csproj
@@ -6,7 +6,7 @@
     <RootNamespace>Zebble</RootNamespace>
     <PackageId>Zebble.ItemPicker</PackageId>
     <Product>$(AssemblyName) ($(TargetFramework))</Product>
-    <Version>3.12.171.0</Version>
+    <Version>3.12.172.0</Version>
     <PackOnBuild>true</PackOnBuild>
     <NeutralLanguage>en</NeutralLanguage>
     <DefineConstants>$(DefineConstants);</DefineConstants>
@@ -64,14 +64,16 @@
     <None Remove="Zebble-LicenseAgreement.txt" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Olive" Version="2.1.224" />
+    <PackageReference Include="Olive" Version="2.1.226" />
     <PackageReference Include="Zebble" Version="4.5.474" />
-    <PackageReference Include="Zebble.OptionsList" Version="3.15.142" />
-    <PackageReference Include="Zebble.SearchInput" Version="3.18.280" />
+    <PackageReference Include="Zebble.OptionsList" Version="3.15.144" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Android\" />
     <Folder Include="iOS\" />
     <Folder Include="UWP\" />
   </ItemGroup>
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="update-local-nuget-cache" />
+  </Target>
 </Project>
