--- a/ItemPicker.csproj
+++ b/ItemPicker.csproj
@@ -6,7 +6,7 @@
     <RootNamespace>Zebble</RootNamespace>
     <PackageId>Zebble.ItemPicker</PackageId>
     <Product>$(AssemblyName) ($(TargetFramework))</Product>
-    <Version>3.12.174.0</Version>
+    <Version>3.12.175.0</Version>
     <PackOnBuild>true</PackOnBuild>
     <NeutralLanguage>en</NeutralLanguage>
     <DefineConstants>$(DefineConstants)</DefineConstants>
@@ -64,9 +64,9 @@
     <None Remove="Zebble-LicenseAgreement.txt" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Olive" Version="2.1.253" />
-    <PackageReference Include="Zebble" Version="4.5.507" />
-    <PackageReference Include="Zebble.OptionsList" Version="3.15.148" />
+    <PackageReference Include="Olive" Version="2.1.279" />
+    <PackageReference Include="Zebble" Version="4.5.543" />
+    <PackageReference Include="Zebble.OptionsList" Version="3.15.149" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Android\" />
@@ -74,6 +74,6 @@
     <Folder Include="UWP\" />
   </ItemGroup>
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="update-local-nuget-cache" />
+    <Exec Command="update-local-nuget-cache $(TargetDir)" />
   </Target>
 </Project>
